Update 20 de outubro de 2020

--- a/src/ProjectoAlexa.Web/Views/Home/Index.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Home/Index.cshtml
@@ -26,8 +26,8 @@
         <div class="carousel-item">
             <img src="~/Media/Imagens/xps-8pb7Hq539Zw-unsplash.jpg" class="d-block w-100" alt="..." style="width:1300px; height:400px;">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                <h5 class="display-4 rounded p-2" style="background-color:">Candidadaturas abertas para o concurso público 2021</h5>
+                <p><a href="@Url.Action("Criar","Conta")" class="btn btn-info">Candidatar-se</a></p>
             </div>
         </div>
     </div>
