--- a/src/ProjectoAlexa.Web/Views/Usuario/Perfil.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Usuario/Perfil.cshtml
@@ -37,8 +37,10 @@
             <div class="card">
                 <h4>Dados de Exame</h4>
                 <hr />
-                <div class="card-body">
-
+                <div class="card-body text-left">
+                    <div class="col-md-4">
+                        <h5>Data de Exame:_____</h5>
+                    </div>
                 </div>
             </div>
         </center>
