--- a/src/ProjectoAlexa.Web/Views/Shared/_Layout.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
 
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="btn btn-info" href="@Url.Action("Criar","Conta")"><span class="fas fa-user-alt"></span> Inscrever-se</a>
+                    <a class="btn btn-info" href="@Url.Action("Registar","Conta")"><span class="fas fa-user-alt"></span> Inscrever-se</a>
                     <a class="btn btn-warning text-white" href="@Url.Action("Login","Conta")"><span class="fas fa-user-alt"></span> Fazer Login</a>
                 </li>
             </ul>
