--- a/src/ProjectoAlexa.Web/Views/Conta/Login.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Conta/Login.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model ProjectoAlexa.Web.ViewModels.LoginViewModel
+
 @{
     ViewBag.Title = "Login";
 }
@@ -11,9 +12,6 @@
     <link href="~/Content/fontawesome-all.css" rel="stylesheet" />
 </head>
 <body class="login-bg">
-
-
-
 
 
     <div class="row">
@@ -40,25 +38,27 @@
                                     <div class="form-group">
                                         <span class="fas fa-user-alt"></span> <label>Nome de Usuário</label>
                                         <div class="">
-                                            <input type="text" class="form-control" />
+                                            @Html.TextBoxFor(model => model.NomeUsuario, new { @class = "form-control" })
+                                            <small>
+                                                @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
+                                            </small>
                                         </div>
                                     </div>
 
                                     <div class="form-group">
                                         <span class="fas fa-key"></span> <label>Senha</label>
                                         <div class="">
-                                            <input type="text" class="form-control" />
+                                            @Html.TextBoxFor(model => model.Senha, new { @class = "form-control" })
+                                            <small>
+                                                @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
+                                            </small>
                                         </div>
                                     </div>
 
-
                                     <div class="form-group">
-
                                         <label>Lembrar?</label>
-                                        <input type="checkbox" />
+                                        @Html.CheckBoxFor(model => model.LembrarMe, new { @class = "" })
                                     </div>
-
-
 
                                     <div class="form-group">
                                         <div class="btn-group">
@@ -75,7 +75,7 @@
                 </div>
             </center>
         </div>
-       
+
 
 
     </div>
