--- a/src/ProjectoAlexa.Web/Views/Home/About.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<strong>Usuário Actual: @User.Identity.Name.</strong>
