--- a/src/ProjectoAlexa.Web/Views/Shared/_LayoutAdmin.cshtml
+++ b/src/ProjectoAlexa.Web/Views/Shared/_LayoutAdmin.cshtml
@@ -112,10 +112,16 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark" href=""
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="fas fa-user-circle"></span> @User.Identity.Name 
+                                <span class="fas fa-user-circle"></span> @User.Identity.Name
                             </a>
                             <ul class="dropdown-menu bg-cyan">
-                                <li class="nav-item"><a href="#" class="nav-link">Sair</a></li>
+                                <li class="nav-item">
+                                    @using (Html.BeginForm("LogOut", "Conta", new { Area = "" }, FormMethod.Post, new { id = "logoutForm" }))
+                                    {
+                                        @Html.AntiForgeryToken()
+                                        <a class="nav-link" href="javascript:document.getElementById('logoutForm').submit()">Sair</a>
+                                    }
+                                </li>
                             </ul>
                         </li>
                     </ul>
@@ -266,5 +272,6 @@
     <!--Custom JavaScript -->
     <script src="~/Templates/material-pro-lite-master/html/js/pages/dashboards/dashboard1.js"></script>
     <script src="~/Templates/material-pro-lite-master/html/js/custom.js"></script>
+    @RenderSection("scripts", required: false)
 </body>
 </html>
